--- a/Each type/Nike.html
+++ b/Each type/Nike.html
@@ -184,6 +184,7 @@
 
                 </ul>
             </td>
+            <!-- ************************************************ First row *********************************************** -->
             <td>
                 <div class="product-box" >
                     <div class="gallery_item_1">
@@ -215,7 +216,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/golden shoe back up/air Max/254725373882_status_bf05be6cd9644555a780cfa0bd8b4e17.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/IMG-20221102-WA0000.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -228,7 +229,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/golden shoe back up/air Max/254741505018_status_3ddadfb9383e4ed6ad58b69de0c7489b.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/FB_IMG_1663769333982.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -239,6 +240,7 @@
                 </div>
             </td>
         </tr>
+        <!-- ################################################### END OF FIRST ROW ############################################ -->
         <tr>
             <td>
                 <div class="product-box">
@@ -256,7 +258,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/golden shoe back up/air Max/254741505018_status_c993c43756114125ad00b7e08dcbef84.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/Screenshot_20220906-085302_2.png  " class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -297,7 +299,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/golden shoe back up/air Max/254748772090_status_0020350098564e93a89e3bf991d1ee9e.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254748772090_status_448f278cf420472b9d2ba01a6ec9a519.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
