--- a/Each type/custom 404 page.html
+++ b/Each type/custom 404 page.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>404 Error Page | CodingNepal</title>
+      <title>404 Error Page</title>
       <link rel="stylesheet" href="style.css">
       <style>
         @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
@@ -16,7 +16,7 @@
 }
 body{
   height: 100vh;
-  background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #69a6ce, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
+  background-image: linear-gradient(to right,blue,red);
   background-size: 400%;
 }
 #error-page{
@@ -128,8 +128,8 @@ body{
                Sorry, the page you're looking for doesn't exist. If you think something is broken, report a problem.
             </p>
             <div class="btns">
-               <a href="https://www.codingnepalweb.com/">return home</a>
-               <a href="https://www.codingnepalweb.com/">report problem</a>
+               <a href="#">return home</a>
+               <a href="#">report problem</a>
             </div>
          </div>
       </div>
