--- a/sign in page.html
+++ b/sign in page.html
@@ -26,9 +26,9 @@
         }
         .header h2,h3 {
             text-align: center;
-            font-weight: 800;
+            font-weight: 600;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: yellow;
+            color: black;
             
         }
         input {
